# digin

./: .gitignore  LICENSE  README.md  README_AGENT.md  pyproject.toml
.claude-plugin/: plugin.json
docs/archive/: ARCHITECTURAL_DECISIONS.md
docs/archive/construction/: IMPLEMENTATION_PLAN.md  PROJECT_OVERVIEW.md
docs/archive/incavate/: README.md  debug_linkedin.py  debug_saved_posts.py  iframe_aware_dump.py  incavate.py  linkedin_iframe_0.html  linkedin_iframe_1.html  linkedin_iframe_2.html  linkedin_iframe_3.html  linkedin_iframe_4.html  linkedin_main_page.html  linkedin_page_dump.html  simple_html_dump.py  test_connection.py
docs/archive/memory-bank/: activeContext.md  progress.md  projectbrief.md  techContext.md
docs/superpowers/plans/: 2026-05-28-digin-mvp.md
docs/superpowers/specs/: 2026-05-27-digin-mvp-design.md  2026-05-30-xdg-coverage-skill.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
skills/digin-workflow/: SKILL.md
src/digin/: cli.py  clustering.py  config.py  llm_clustering.py  models.py  paths.py  scraper.py  storage.py  viz.py
src/digin/skills/digin/: SKILL.md
tests/: test_cli.py  test_clustering.py  test_config.py  test_models.py  test_paths.py  test_storage.py
