[project]
name = "digin"
version = "0.1.0"
description = "LinkedIn saved posts research and clustering tool"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40.0",
    "click>=8.0.0",
    "sentence-transformers>=2.0.0",
    "scikit-learn>=1.0.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
digin = "digin.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/digin"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.coverage.run]
source = ["digin"]
branch = true
omit = ["src/digin/scraper.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = ["if __name__", "pragma: no cover"]
